# pyfunctory

./: .pre-commit-config.yaml  .travis.yml  Makefile  README.md  atoms.py  compounds.py  factories.py  filter_compounds.py  nuggets.py  process.py  pyfunctory.py  pyproject.toml  utilities.py
pyfunctory/: atoms.py  compounds.py  factories.py  nuggets.py  process.py  utilities.py
tests/: test_atoms.py  test_compounds.py  test_factories.py  test_filter_compounds.py
