[tool.poetry]
name = "pyfunctory"
version = "0.1.0"
description = "Pythonic functional utility library"
authors = ["James Thomas <codeactor@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
