[tool.poetry]
name = "pyfunctory"
version = "0.1.0"
description = "Pythonic functional utility library"
authors = ["James Thomas <codeactor@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
jedi = "^0.17.0"
flake8 = "^3.8.2"
black = "^19.10b0"
pre-commit = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
